tests/type/unknown_lambda_type.rz
var a: fn(a) // error: unknown type 'a'
var b: fn(int) -> foo // error: unknown type 'foo'